--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "run-s lint:*"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "pinia": "^3.0.1",
     "swiper": "^11.2.6",
     "vue": "^3.5.13",
